--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ yarn-error.log
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
+*.pem
+*.key
+secrets.json
+config.production.js
 
 # Database
 *.sqlite
